August  2024 (1.25.0) - jsmith@resonatingmedia.com

- Clean up manual page description of -c (--config) to make the scanning for
  a configuration directory clearer.

- Perform check for openrc-run in multiple locations to identify OpenRC jobs.


October 2021 (1.24.0) - jsmith@resonatingmedia.com

- Fix off-by one error in filename filtering.
  Fix provided by Mark Hindley.
- Added ignore rule for files ending with .ucf which is used by Debian
  to manage scripts.
  Patch provided by Mark Hindley.


December 2020 (1.23.0) - jsmith@resonatingmedia.com

- Check only LSB header for overlapping runlevels to fix.
- Updated manual page to indicate scripts with LSB headers
  that do not include a start (or stop) runlevel will not
  be marked for starting (or stopping).
- Fixed typo in manual page.


October 2019 (1.22.0) - jsmith@resonatingmedia.com

- Removed debugging flag from Makefile. It should be
  overruled anyway by the optimization flag.
- Use git login credentials to upload rather than svn, which is no longer used.
  Make sure git ignores files that we build, or need during build process.
  Added PREFIX variable to Makefile to better control where manual page and
  insserv executable are stored. Defaults to /usr.
  This effectively moves insserv executable from /sbin to /usr/sbin.
- Make sure we define "extension" for older versions of GCC (5 and under).
  Make systemd/dbus support optional in Makefile using WANT_SYSTEMD
  flag.
  Patches provided by Petr Ovtchenkov and Dmitry Bogatov.
- Added support for checking to see if a script that is missing its LSB
  header may be an OpenRC script.
  Patch provided by Merlijn Wajer, Ivan J, and Tito.
 

July 2019 (1.21.0) - jsmith@resonatingmedia.com

- Fixed typo in insserv.8 manual page.
- Make it clear that when --verbose (-v) flag is used,
  status information is printed to stderr.
- Added silent (-q) flag which blocks warning messages
  to stderr. In this mode insserv only prints fatal
  error messages.